gitops/sample-nginx/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: sample-nginx

spec:

  replicas: 2

  selector:

    matchLabels:

      app: sample-nginx

  template:

    metadata:

      labels:

        app: sample-nginx

    spec:

      containers:

      - name: nginx

        image: nginx:latest

        ports:

        - containerPort: 80
