gitops/sample-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: sample-nginx

spec:

  ingressClassName: nginx

  rules:

  - host: sample.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: sample-nginx

            port:

              number: 80
